--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <h2>Realty Group</h2>
 
     <!-- your code here! See README.md for deliverables -->
-    <video controls autoplay width="600px" height="400px">
+    <video controls width="600px" height="400px" autoplay>
       <source
-        src="http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.mp4"
+        src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.mp4"
         type="video/mp4"
       />
       <source
-        src="http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.ogv"
+        src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.ogg"
         type="video/ogg"
       />
     </video>
