--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <h2>Realty Group</h2>
 
     <!-- your code here! See README.md for deliverables -->
-
+    <video autoplay controls width="600px" height="400px" autoplay>
+      <source src="" type="video/mp4">
+      <source src="" type="video/ogg">
+    </video>
   </body>
 </html>
